@@ -3,6 +3,8 @@
 	* Makefile.am files: some reorganization, but mostly adding
 	  EXTRA_DIST macros so the distributed tarball generated by
 	  make dist has everything it needs.
+	* configure.in and /bindings/f77/Makefile.am: Cross-platform 
+	  glitches fixed for solaris.
 
 2002-11-24  Alan W. Irwin <irwin@beluga.phys.uvic.ca>
 
